src/test/deca/syntax/invalid/print/no_semi_column_println_12.deca
// Description:
//    Tests a syntactically incorrect program for a println call with a missing semi-column
//
// Results:
//    Line 12 : Error, unexpected token. Expected a ';'.
//
// History:
//    created on 17/12/2024

{
        println("Hello")
}